--- a/src/_locales/am/messages.json
+++ b/src/_locales/am/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "የበስተጀርባ ምስልን ይመልከቱ"
-    },
-    "extDescription": {
-        "message": "በአውድ ምናሌው ውስጥ \"የበስተጀርባ ምስልን ይመልከቱ\""
-    },
-    "title": {
-        "message": "የበስተጀርባ ምስልን ይመልከቱ"
-    },
-    "security": {
-        "message": "ለደህንነት ሲባል ቅጥያው በዚህ ገጽ ላይ አይሰራም።"
-    },
-    "reload": {
-        "message": "እባክዎ ትሩን እንደገና ይጫኑት።"
-    },
-    "failure": {
-        "message": "የበስተጀርባውን ምስል ማግኘት አልተሳካም።\nችግር ሪፖርት ያድርጉ?"
-    }
+  "extName": {
+    "message": "የበስተጀርባ ምስል ይመልከቱ"
+  },
+  "extDescription": {
+    "message": "ወደ አውድ ምናሌው «የበስተጀርባ ምስል ይመልከቱ» ያክላል።"
+  },
+  "review": {
+    "message": "ግምገማ"
+  },
+  "donation": {
+    "message": "ልገሳ"
+  },
+  "security": {
+    "message": "ቅጥያው በልዩ ገጾች ላይ እንዲሠራ አይፈቀድለትም።"
+  },
+  "reload": {
+    "message": "ቅጥያውን ከጫኑ ወይም ካዘመኑ በኋላ ገጾችን እንደገና ይጫኑ።"
+  },
+  "failure": {
+    "message": "የበስተጀርባ ምስሎችን ማየት አልተቻለም"
+  },
+  "report": {
+    "message": "ችግር ሪፖርት ያድርጉ?"
+  }
 }
