--- a/src/_locales/kn/messages.json
+++ b/src/_locales/kn/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "ಹಿನ್ನಲೆಯ ಚಿತ್ರವನ್ನು ನೋಡು"
-    },
-    "extDescription": {
-        "message": "ಸಂದರ್ಭ ಮೆನುವಿನಲ್ಲಿ \"ಹಿನ್ನಲೆಯ ಚಿತ್ರವನ್ನು ನೋಡು\"."
-    },
-    "title": {
-        "message": "ಹಿನ್ನಲೆಯ ಚಿತ್ರವನ್ನು ನೋಡು"
-    },
-    "security": {
-        "message": "ಭದ್ರತಾ ಕಾರಣಗಳಿಗಾಗಿ ವಿಸ್ತರಣೆಯು ಈ ಪುಟದಲ್ಲಿ ಕಾರ್ಯನಿರ್ವಹಿಸುವುದಿಲ್ಲ."
-    },
-    "reload": {
-        "message": "ದಯವಿಟ್ಟು ಟ್ಯಾಬ್ ಅನ್ನು ಮರುಲೋಡ್ ಮಾಡಿ."
-    },
-    "failure": {
-        "message": "ಹಿನ್ನೆಲೆ ಚಿತ್ರವನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ.\nಸಮಸ್ಯೆಯನ್ನು ವರದಿ ಮಾಡಬೇಕೆ?"
-    }
+  "extName": {
+    "message": "ಹಿನ್ನೆಲೆ ಚಿತ್ರವನ್ನು ವೀಕ್ಷಿಸಿ"
+  },
+  "extDescription": {
+    "message": "ಸಂದರ್ಭ ಮೆನುಗೆ “ಹಿನ್ನೆಲೆ ಚಿತ್ರವನ್ನು ವೀಕ್ಷಿಸಿ” ಅನ್ನು ಸೇರಿಸುತ್ತದೆ."
+  },
+  "review": {
+    "message": "ಸಮೀಕ್ಷೆ"
+  },
+  "donation": {
+    "message": "ದಾನ"
+  },
+  "security": {
+    "message": "ವಿಶೇಷ ಪುಟಗಳಲ್ಲಿ ವಿಸ್ತರಣೆಯನ್ನು ಚಲಾಯಿಸಲು ಅನುಮತಿಸಲಾಗುವುದಿಲ್ಲ."
+  },
+  "reload": {
+    "message": "ವಿಸ್ತರಣೆಯನ್ನು ಸ್ಥಾಪಿಸಿದ ಅಥವಾ ನವೀಕರಿಸಿದ ನಂತರ ಪುಟಗಳನ್ನು ಮರುಲೋಡ್ ಮಾಡಿ."
+  },
+  "failure": {
+    "message": "ಹಿನ್ನೆಲೆ ಚಿತ್ರಗಳನ್ನು ವೀಕ್ಷಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ"
+  },
+  "report": {
+    "message": "ಸಮಸ್ಯೆಯನ್ನು ವರದಿ ಮಾಡಬೇಕೆ?"
+  }
 }
