--- a/src/_locales/ml/messages.json
+++ b/src/_locales/ml/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "പശ്ചാത്തല ചിത്രം കാണുക"
-    },
-    "extDescription": {
-        "message": "സന്ദർഭ മെനുവിൽ \"പശ്ചാത്തല ചിത്രം കാണുക\"."
-    },
-    "title": {
-        "message": "പശ്ചാത്തല ചിത്രം കാണുക"
-    },
-    "security": {
-        "message": "സുരക്ഷാ കാരണങ്ങളാൽ വിപുലീകരണം ഈ പേജിൽ പ്രവർത്തിക്കുന്നില്ല."
-    },
-    "reload": {
-        "message": "ടാബ് വീണ്ടും ലോഡുചെയ്യുക."
-    },
-    "failure": {
-        "message": "പശ്ചാത്തല ചിത്രം നേടുന്നതിൽ പരാജയപ്പെട്ടു.\nഒരു പ്രശ്നം റിപ്പോർട്ടുചെയ്യണോ?"
-    }
+  "extName": {
+    "message": "പശ്ചാത്തല ചിത്രം കാണുക"
+  },
+  "extDescription": {
+    "message": "സന്ദർഭ മെനുവിലേക്ക് “പശ്ചാത്തല ചിത്രം കാണുക” ചേർക്കുന്നു."
+  },
+  "review": {
+    "message": "അവലോകനം"
+  },
+  "donation": {
+    "message": "ദാനം"
+  },
+  "security": {
+    "message": "വിപുലീകരണം പ്രത്യേക പേജുകളിൽ പ്രവർത്തിക്കാൻ അനുവദിക്കില്ല."
+  },
+  "reload": {
+    "message": "വിപുലീകരണം ഇൻസ്റ്റാൾ ചെയ്തതിന് ശേഷം അല്ലെങ്കിൽ അപ്ഡേറ്റ് ചെയ്തതിന് ശേഷം പേജുകൾ റീലോഡ് ചെയ്യുക."
+  },
+  "failure": {
+    "message": "പശ്ചാത്തല ചിത്രങ്ങൾ കാണാൻ കഴിയില്ല"
+  },
+  "report": {
+    "message": "ഒരു പ്രശ്നം റിപ്പോർട്ടുചെയ്യണോ?"
+  }
 }
