--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Ver imagem de fundo"
-    },
-    "extDescription": {
-        "message": "\"Ver imagem de fundo\" no menu de contexto."
-    },
-    "title": {
-        "message": "Ver imagem de fundo"
-    },
-    "security": {
-        "message": "A extensão não funciona nesta página por motivos de segurança."
-    },
-    "reload": {
-        "message": "Por favor, recarregue a aba."
-    },
-    "failure": {
-        "message": "Falha ao obter a imagem de plano de fundo.\nInformar um problema?"
-    }
+  "extName": {
+    "message": "Ver imagem de fundo"
+  },
+  "extDescription": {
+    "message": "Adiciona «Ver imagem de fundo» ao menu de contexto."
+  },
+  "review": {
+    "message": "Análise"
+  },
+  "donation": {
+    "message": "Doação"
+  },
+  "security": {
+    "message": "A extensão não pode ser executada em páginas especiais."
+  },
+  "reload": {
+    "message": "Recarregar páginas depois de instalar ou atualizar a extensão."
+  },
+  "failure": {
+    "message": "Não é possível visualizar imagens de fundo"
+  },
+  "report": {
+    "message": "Informar um problema?"
+  }
 }
