--- a/src/_locales/sr/messages.json
+++ b/src/_locales/sr/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Прикажи позадинску слику"
-    },
-    "extDescription": {
-        "message": "\"Прикажи позадинску слику\" у контекстном менију."
-    },
-    "title": {
-        "message": "Прикажи позадинску слику"
-    },
-    "security": {
-        "message": "Проширење не ради на овој страници из безбедносних разлога."
-    },
-    "reload": {
-        "message": "Поново учитајте картицу."
-    },
-    "failure": {
-        "message": "Добијање позадинске слике није успело.\nПријавите проблем?"
-    }
+  "extName": {
+    "message": "Прикажи позадинску слику"
+  },
+  "extDescription": {
+    "message": "Додаје „Прикажи позадинску слику“ у контекстни мени."
+  },
+  "review": {
+    "message": "Преглед"
+  },
+  "donation": {
+    "message": "Донација"
+  },
+  "security": {
+    "message": "Екстензија није дозвољена да се покреће на посебним страницама."
+  },
+  "reload": {
+    "message": "Поново учитајте странице након инсталирања или ажурирања екстензије."
+  },
+  "failure": {
+    "message": "Не могу видети позадинске слике"
+  },
+  "report": {
+    "message": "Пријавите проблем?"
+  }
 }
