--- a/src/_locales/ta/messages.json
+++ b/src/_locales/ta/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "பின்னணி படத்தைக் காட்டு"
-    },
-    "extDescription": {
-        "message": "சூழல் மெனுவில் \"பின்னணி படத்தைக் காட்டு\"."
-    },
-    "title": {
-        "message": "பின்னணி படத்தைக் காட்டு"
-    },
-    "security": {
-        "message": "பாதுகாப்பு காரணங்களுக்காக இந்த பக்கத்தில் நீட்டிப்பு இயங்காது."
-    },
-    "reload": {
-        "message": "தாவலை மீண்டும் ஏற்றவும்."
-    },
-    "failure": {
-        "message": "பின்னணி படத்தைப் பெறுவதில் தோல்வி.\nசிக்கலைப் புகாரளிக்கவா?"
-    }
+  "extName": {
+    "message": "பின்னணி படத்தைக் காண்க"
+  },
+  "extDescription": {
+    "message": "சூழல் மெனுவில் “பின்னணி படத்தைக் காண்க” சேர்க்கிறது."
+  },
+  "review": {
+    "message": "விமர்சனம்"
+  },
+  "donation": {
+    "message": "தானம்"
+  },
+  "security": {
+    "message": "சிறப்புப் பக்கங்களில் நீட்டிப்பு இயங்க அனுமதிக்கப்படவில்லை."
+  },
+  "reload": {
+    "message": "நீட்டிப்பை நிறுவிய அல்லது புதுப்பித்த பிறகு பக்கங்களை மீண்டும் ஏற்றவும்."
+  },
+  "failure": {
+    "message": "பின்னணி படங்களை பார்க்க முடியாது"
+  },
+  "report": {
+    "message": "சிக்கலைப் புகாரளிக்கவா?"
+  }
 }
