--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Переглянути зображення тла"
-    },
-    "extDescription": {
-        "message": "\"Переглянути зображення тла\" в контекстному меню."
-    },
-    "title": {
-        "message": "Переглянути зображення тла"
-    },
-    "security": {
-        "message": "Розширення на цій сторінці не працює з міркувань безпеки."
-    },
-    "reload": {
-        "message": "Перезавантажте вкладку."
-    },
-    "failure": {
-        "message": "Не вдалося отримати фонове зображення.\nБажаєте повідомити про помилку?"
-    }
+  "extName": {
+    "message": "Переглянути фонове зображення"
+  },
+  "extDescription": {
+    "message": "Додає «Переглянути фонове зображення» до контекстного меню."
+  },
+  "review": {
+    "message": "огляд"
+  },
+  "donation": {
+    "message": "Пожертвування"
+  },
+  "security": {
+    "message": "Розширення не можна запускати на спеціальних сторінках."
+  },
+  "reload": {
+    "message": "Перезавантажте сторінки після встановлення або оновлення розширення."
+  },
+  "failure": {
+    "message": "Неможливо переглянути фонові зображення"
+  },
+  "report": {
+    "message": "Повідомити про проблему?"
+  }
 }
