--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Преглед на фоновото изображение"
-    },
-    "extDescription": {
-        "message": "\"Преглед на фоновото изображение\" в контекстното меню."
-    },
-    "title": {
-        "message": "Преглед на фоновото изображение"
-    },
-    "security": {
-        "message": "Разширението не работи на тази страница от съображения за сигурност."
-    },
-    "reload": {
-        "message": "Моля, презаредете раздела."
-    },
-    "failure": {
-        "message": "Неуспешно получаване на фоновото изображение.\nДа докладвате за проблем?"
-    }
+  "extName": {
+    "message": "Преглед на фоново изображение"
+  },
+  "extDescription": {
+    "message": "Добавя „Преглед на фоново изображение“ към контекстното меню."
+  },
+  "review": {
+    "message": "Преглед"
+  },
+  "donation": {
+    "message": "Дарение"
+  },
+  "security": {
+    "message": "Разширението не може да се изпълнява на специални страници."
+  },
+  "reload": {
+    "message": "Презаредете страниците след инсталиране или актуализиране на разширението."
+  },
+  "failure": {
+    "message": "Не могат да се видят фонови изображения"
+  },
+  "report": {
+    "message": "Да докладвате за проблем?"
+  }
 }
