--- a/src/_locales/ca/messages.json
+++ b/src/_locales/ca/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Visualitza la imatge de fons"
-    },
-    "extDescription": {
-        "message": "\"Visualitza la imatge de fons\" al menú contextual."
-    },
-    "title": {
-        "message": "Visualitza la imatge de fons"
-    },
-    "security": {
-        "message": "L’extensió no funciona en aquesta pàgina per motius de seguretat."
-    },
-    "reload": {
-        "message": "Torneu a carregar la pestanya."
-    },
-    "failure": {
-        "message": "No s'ha pogut obtenir la imatge de fons.\nInformar d’un problema?"
-    }
+  "extName": {
+    "message": "Visualitza la imatge de fons"
+  },
+  "extDescription": {
+    "message": "Afegeix «Visualitza la imatge de fons» al menú contextual."
+  },
+  "review": {
+    "message": "Revisió"
+  },
+  "donation": {
+    "message": "Donació"
+  },
+  "security": {
+    "message": "L'extensió no es pot executar en pàgines especials."
+  },
+  "reload": {
+    "message": "Torneu a carregar les pàgines després d'instal·lar o actualitzar l'extensió."
+  },
+  "failure": {
+    "message": "No es poden veure imatges de fons"
+  },
+  "report": {
+    "message": "Informar d'un problema?"
+  }
 }
