--- a/src/_locales/da/messages.json
+++ b/src/_locales/da/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Vis baggrundsbillede"
-    },
-    "extDescription": {
-        "message": "\"Vis baggrundsbillede\" i kontekstmenuen."
-    },
-    "title": {
-        "message": "Vis baggrundsbillede"
-    },
-    "security": {
-        "message": "Udvidelsen fungerer ikke på denne side af sikkerhedsmæssige årsager."
-    },
-    "reload": {
-        "message": "Venligst genindlæs fanen."
-    },
-    "failure": {
-        "message": "Kunne ikke få baggrundsbilledet.\nRapportér et problem?"
-    }
+  "extName": {
+    "message": "Vis baggrundsbillede"
+  },
+  "extDescription": {
+    "message": "Tilføjer »Vis baggrundsbillede« til kontekstmenuen."
+  },
+  "review": {
+    "message": "Anmeldelse"
+  },
+  "donation": {
+    "message": "Donation"
+  },
+  "security": {
+    "message": "Udvidelsen må ikke køre på særlige sider."
+  },
+  "reload": {
+    "message": "Genindlæs sider efter installation eller opdatering af udvidelsen."
+  },
+  "failure": {
+    "message": "Kan ikke se baggrundsbilleder"
+  },
+  "report": {
+    "message": "Rapporter et problem?"
+  }
 }
