--- a/src/_locales/gu/messages.json
+++ b/src/_locales/gu/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "પાશ્વ ભાગ ચિત્ર જુઓ"
-    },
-    "extDescription": {
-        "message": "સંદર્ભ મેનૂમાં \"પાશ્વ ભાગ ચિત્ર જુઓ\"."
-    },
-    "title": {
-        "message": "પાશ્વ ભાગ ચિત્ર જુઓ"
-    },
-    "security": {
-        "message": "સુરક્ષા કારણોસર આ પૃષ્ઠ પર એક્સ્ટેંશન કામ કરતું નથી."
-    },
-    "reload": {
-        "message": "કૃપા કરીને ટ .બ ફરીથી લોડ કરો."
-    },
-    "failure": {
-        "message": "પૃષ્ઠભૂમિ છબી મેળવવામાં નિષ્ફળ.\nકોઈ મુદ્દાની જાણ કરો?"
-    }
+  "extName": {
+    "message": "જુઓ પૃષ્ઠભૂમિ છબી"
+  },
+  "extDescription": {
+    "message": "સંદર્ભ મેનૂમાં “જુઓ પૃષ્ઠભૂમિ છબી” ઉમેરે છે."
+  },
+  "review": {
+    "message": "સમીક્ષા"
+  },
+  "donation": {
+    "message": "દાન"
+  },
+  "security": {
+    "message": "એક્સ્ટેંશનને વિશિષ્ટ પૃષ્ઠો પર ચલાવવાની મંજૂરી નથી."
+  },
+  "reload": {
+    "message": "એક્સ્ટેંશન ઇન્સ્ટોલ અથવા અપડેટ કર્યા પછી પૃષ્ઠોને ફરીથી લોડ કરો."
+  },
+  "failure": {
+    "message": "પૃષ્ઠભૂમિ છબીઓ જોઈ શકતા નથી"
+  },
+  "report": {
+    "message": "કોઈ મુદ્દાની જાણ કરો?"
+  }
 }
