--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Pogledaj pozadinsku sliku"
-    },
-    "extDescription": {
-        "message": "\"Pogledaj pozadinsku sliku\" u kontekstnom izborniku."
-    },
-    "title": {
-        "message": "Pogledaj pozadinsku sliku"
-    },
-    "security": {
-        "message": "Proširenje ne funkcionira na ovoj stranici iz sigurnosnih razloga."
-    },
-    "reload": {
-        "message": "Ponovno umetnite karticu."
-    },
-    "failure": {
-        "message": "Nije moguće dobiti pozadinsku sliku.\nPrijaviti problem?"
-    }
+  "extName": {
+    "message": "Pogledaj pozadinsku sliku"
+  },
+  "extDescription": {
+    "message": "Dodaje „Pogledaj pozadinsku sliku“ u kontekstni izbornik."
+  },
+  "review": {
+    "message": "Pregled"
+  },
+  "donation": {
+    "message": "Donacija"
+  },
+  "security": {
+    "message": "Ekstenzija se ne smije izvoditi na posebnim stranicama."
+  },
+  "reload": {
+    "message": "Ponovno učitavanje stranica nakon instaliranja ili ažuriranja proširenja."
+  },
+  "failure": {
+    "message": "Nije moguće vidjeti pozadinsku sliku"
+  },
+  "report": {
+    "message": "Prijaviti problem?"
+  }
 }
