--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Háttérkép megjelenítése"
-    },
-    "extDescription": {
-        "message": "\"Háttérkép megjelenítése\" a helyi menüben."
-    },
-    "title": {
-        "message": "Háttérkép megjelenítése"
-    },
-    "security": {
-        "message": "A kiterjesztés biztonsági okokból ezen az oldalon nem működik."
-    },
-    "reload": {
-        "message": "Töltse újra a fület."
-    },
-    "failure": {
-        "message": "A háttérkép beolvasása nem sikerült.\nHibabejelentés?"
-    }
+  "extName": {
+    "message": "Háttérkép megjelenítése"
+  },
+  "extDescription": {
+    "message": "Hozzáadja a „Háttérkép megtekintése” elemet a helyi menühöz."
+  },
+  "review": {
+    "message": "Felülvizsgálat"
+  },
+  "donation": {
+    "message": "Adomány"
+  },
+  "security": {
+    "message": "A bővítmény nem futhat speciális oldalakon."
+  },
+  "reload": {
+    "message": "A bővítmény telepítése vagy frissítése után töltse be újra az oldalakat."
+  },
+  "failure": {
+    "message": "Nem lehet megtekinteni a háttérképeket"
+  },
+  "report": {
+    "message": "Hibabejelentés?"
+  }
 }
