--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Lihat Gambar Latar Belakang"
-    },
-    "extDescription": {
-        "message": "\"Lihat Gambar Latar Belakang\" di menu konteks."
-    },
-    "title": {
-        "message": "Lihat Gambar Latar Belakang"
-    },
-    "security": {
-        "message": "Ekstensi tidak berfungsi di halaman ini karena alasan keamanan."
-    },
-    "reload": {
-        "message": "Harap muat kembali tab."
-    },
-    "failure": {
-        "message": "Gagal mendapatkan gambar latar belakang.\nLaporkan masalah?"
-    }
+  "extName": {
+    "message": "Lihat Gambar Latar Belakang"
+  },
+  "extDescription": {
+    "message": "Menambahkan “Lihat Gambar Latar Belakang” ke menu konteks."
+  },
+  "review": {
+    "message": "Tinjauan"
+  },
+  "donation": {
+    "message": "Sumbangan"
+  },
+  "security": {
+    "message": "Ekstensi tidak diperbolehkan berjalan pada halaman khusus."
+  },
+  "reload": {
+    "message": "Muat ulang halaman setelah menginstal atau memperbarui ekstensi."
+  },
+  "failure": {
+    "message": "Tidak dapat melihat gambar latar belakang"
+  },
+  "report": {
+    "message": "Laporkan masalah?"
+  }
 }
