--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Visualizza immagine di sfondo"
-    },
-    "extDescription": {
-        "message": "\"Visualizza immagine di sfondo\" nel menu contestuale."
-    },
-    "title": {
-        "message": "Visualizza immagine di sfondo"
-    },
-    "security": {
-        "message": "L'estensione non funziona su questa pagina per motivi di sicurezza."
-    },
-    "reload": {
-        "message": "Si prega di ricaricare la scheda."
-    },
-    "failure": {
-        "message": "Impossibile ottenere l'immagine di sfondo.\nSegnala un problema?"
-    }
+  "extName": {
+    "message": "Visualizza immagine di sfondo"
+  },
+  "extDescription": {
+    "message": "Aggiunge «Visualizza immagine di sfondo» al menu contestuale."
+  },
+  "review": {
+    "message": "Revisione"
+  },
+  "donation": {
+    "message": "Donazione"
+  },
+  "security": {
+    "message": "L'estensione non può essere eseguita su pagine speciali."
+  },
+  "reload": {
+    "message": "Ricarica le pagine dopo aver installato o aggiornato l'estensione."
+  },
+  "failure": {
+    "message": "Impossibile visualizzare le immagini di sfondo"
+  },
+  "report": {
+    "message": "Segnala un problema?"
+  }
 }
