--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "背景画像を表示"
-    },
-    "extDescription": {
-        "message": "右クリックメニューに「背景画像を表示」を追加します。"
-    },
-    "title": {
-        "message": "背景画像を表示"
-    },
-    "security": {
-        "message": "セキュリティ上の理由のため、このページ上では実行できません。"
-    },
-    "reload": {
-        "message": "タブを再読み込みしてください。"
-    },
-    "failure": {
-        "message": "背景画像を取得できません。\n問題を報告しますか？"
-    }
+  "extName": {
+    "message": "背景画像を表示"
+  },
+  "extDescription": {
+    "message": "コンテキストメニューに「背景画像を表示」を追加します。"
+  },
+  "review": {
+    "message": "評価"
+  },
+  "donation": {
+    "message": "寄付"
+  },
+  "security": {
+    "message": "拡張機能は特殊なページ上では実行を許可されていません。"
+  },
+  "reload": {
+    "message": "拡張機能のインストールとアップデートの後はページを再読み込みしてください。"
+  },
+  "failure": {
+    "message": "背景画像を表示できません"
+  },
+  "report": {
+    "message": "問題を報告しますか？"
+  }
 }
