--- a/src/_locales/mr/messages.json
+++ b/src/_locales/mr/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "पार्श्वभूमीतील चित्राचे दृष्य"
-    },
-    "extDescription": {
-        "message": "संदर्भ मेनूमधील \"पार्श्वभूमीतील चित्राचे दृष्य\"."
-    },
-    "title": {
-        "message": "पार्श्वभूमीतील चित्राचे दृष्य"
-    },
-    "security": {
-        "message": "सुरक्षिततेच्या कारणास्तव या पृष्ठावर विस्तार कार्य करत नाही."
-    },
-    "reload": {
-        "message": "कृपया टॅब रीलोड करा."
-    },
-    "failure": {
-        "message": "पार्श्वभूमी प्रतिमा मिळविण्यात अयशस्वी.\nसमस्येचा अहवाल द्या?"
-    }
+  "extName": {
+    "message": "पार्श्वभूमी प्रतिमा पहा"
+  },
+  "extDescription": {
+    "message": "संदर्भ मेनूमध्ये “पार्श्वभूमी प्रतिमा पहा” जोडते."
+  },
+  "review": {
+    "message": "पुनरावलोकन करा"
+  },
+  "donation": {
+    "message": "दान"
+  },
+  "security": {
+    "message": "विस्ताराला विशेष पृष्ठांवर चालण्याची परवानगी नाही."
+  },
+  "reload": {
+    "message": "विस्तार स्थापित केल्यानंतर किंवा अद्यतनित केल्यानंतर पृष्ठे रीलोड करा."
+  },
+  "failure": {
+    "message": "पार्श्वभूमी प्रतिमा पाहू शकत नाही"
+  },
+  "report": {
+    "message": "समस्येचा अहवाल द्या?"
+  }
 }
