--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Vezi imaginea de fundal"
-    },
-    "extDescription": {
-        "message": "\"Vezi imaginea de fundal\" în meniul contextual."
-    },
-    "title": {
-        "message": "Vezi imaginea de fundal"
-    },
-    "security": {
-        "message": "Extensia nu funcționează pe această pagină din motive de securitate."
-    },
-    "reload": {
-        "message": "Vă rugăm să reîncărcați fila."
-    },
-    "failure": {
-        "message": "Eroarea de a obține imaginea de fundal.\nRaportează o problemă?"
-    }
+  "extName": {
+    "message": "Vizualizare imagine de fundal"
+  },
+  "extDescription": {
+    "message": "Adaugă „Vizualizare imagine de fundal” în meniul contextual."
+  },
+  "review": {
+    "message": "Revizuire"
+  },
+  "donation": {
+    "message": "Donare"
+  },
+  "security": {
+    "message": "Extensia nu are voie să ruleze pe pagini speciale."
+  },
+  "reload": {
+    "message": "Reîncărcați paginile după instalarea sau actualizarea extensiei."
+  },
+  "failure": {
+    "message": "Nu se pot vizualiza imagini de fundal"
+  },
+  "report": {
+    "message": "Raportează o problemă?"
+  }
 }
