--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Открыть фоновое изображение"
-    },
-    "extDescription": {
-        "message": "\"Открыть фоновое изображение\" в контекстном меню."
-    },
-    "title": {
-        "message": "Открыть фоновое изображение"
-    },
-    "security": {
-        "message": "Расширение не работает на этой странице по соображениям безопасности."
-    },
-    "reload": {
-        "message": "Перезагрузите вкладку."
-    },
-    "failure": {
-        "message": "Не удалось получить фоновое изображение.\nЖелаете сообщить о проблеме?"
-    }
+  "extName": {
+    "message": "Просмотр фонового изображения"
+  },
+  "extDescription": {
+    "message": "Добавляет «Просмотр фонового изображения» в контекстное меню."
+  },
+  "review": {
+    "message": "Обзор"
+  },
+  "donation": {
+    "message": "Пожертвование"
+  },
+  "security": {
+    "message": "Расширению не разрешен запуск на специальных страницах."
+  },
+  "reload": {
+    "message": "Перезагружайте страницы после установки или обновления расширения."
+  },
+  "failure": {
+    "message": "Невозможно просмотреть фоновые изображения"
+  },
+  "report": {
+    "message": "Сообщить о проблеме?"
+  }
 }
