--- a/src/_locales/te/messages.json
+++ b/src/_locales/te/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "వెనుతలపు బొమ్మని చూడండి"
-    },
-    "extDescription": {
-        "message": "సందర్భ మెనులో \"వెనుతలపు బొమ్మని చూడండి\"."
-    },
-    "title": {
-        "message": "వెనుతలపు బొమ్మని చూడండి"
-    },
-    "security": {
-        "message": "భద్రతా కారణాల వల్ల పొడిగింపు ఈ పేజీలో పనిచేయదు."
-    },
-    "reload": {
-        "message": "దయచేసి టాబ్‌ను మళ్లీ లోడ్ చేయండి."
-    },
-    "failure": {
-        "message": "నేపథ్య చిత్రాన్ని పొందడంలో విఫలమైంది.\nసమస్యను నివేదించాలా?"
-    }
+  "extName": {
+    "message": "నేపథ్యం చిత్రాన్ని వీక్షించండి"
+  },
+  "extDescription": {
+    "message": "సందర్భ మెనుకి “నేపథ్యం చిత్రాన్ని వీక్షించండి” జోడిస్తుంది."
+  },
+  "review": {
+    "message": "సమీక్ష"
+  },
+  "donation": {
+    "message": "దానం"
+  },
+  "security": {
+    "message": "పొడిగింపు ప్రత్యేక పేజీలలో అమలు చేయడానికి అనుమతించబడదు."
+  },
+  "reload": {
+    "message": "పొడిగింపును ఇన్‌స్టాల్ చేసిన తర్వాత లేదా నవీకరించిన తర్వాత పేజీలను మళ్లీ లోడ్ చేయండి."
+  },
+  "failure": {
+    "message": "నేపథ్య చిత్రాలను వీక్షించలేరు"
+  },
+  "report": {
+    "message": "సమస్యను నివేదించాలా?"
+  }
 }
