--- a/src/_locales/th/messages.json
+++ b/src/_locales/th/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "ดูภาพพื้นหลัง"
-    },
-    "extDescription": {
-        "message": "\"ดูภาพพื้นหลัง\" ในเมนูบริบท"
-    },
-    "title": {
-        "message": "ดูภาพพื้นหลัง"
-    },
-    "security": {
-        "message": "ส่วนขยายไม่ทำงานในหน้านี้ด้วยเหตุผลด้านความปลอดภัย"
-    },
-    "reload": {
-        "message": "โปรดโหลดแท็บซ้ำอีกครั้ง"
-    },
-    "failure": {
-        "message": "ไม่สามารถรับภาพพื้นหลัง\nรายงานปัญหา?"
-    }
+  "extName": {
+    "message": "ดูภาพพื้นหลัง"
+  },
+  "extDescription": {
+    "message": "เพิ่ม “ดูภาพพื้นหลัง” ลงในเมนูบริบท"
+  },
+  "review": {
+    "message": "ทบทวน"
+  },
+  "donation": {
+    "message": "บริจาค"
+  },
+  "security": {
+    "message": "ไม่อนุญาตให้ส่วนขยายทำงานบนหน้าพิเศษ"
+  },
+  "reload": {
+    "message": "โหลดหน้าซ้ำหลังจากติดตั้งหรืออัปเดตส่วนขยาย"
+  },
+  "failure": {
+    "message": "ไม่สามารถดูภาพพื้นหลังได้"
+  },
+  "report": {
+    "message": "รายงานปัญหา?"
+  }
 }
