--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "Xem ảnh nền"
-    },
-    "extDescription": {
-        "message": "\"Xem ảnh nền\" trong menu ngữ cảnh."
-    },
-    "title": {
-        "message": "Xem ảnh nền"
-    },
-    "security": {
-        "message": "Tiện ích mở rộng không hoạt động trên trang này vì lý do bảo mật."
-    },
-    "reload": {
-        "message": "Vui lòng tải lại tab."
-    },
-    "failure": {
-        "message": "Không thể có được hình ảnh nền.\nBáo cáo một vấn đề?"
-    }
+  "extName": {
+    "message": "Xem ảnh nền"
+  },
+  "extDescription": {
+    "message": "Thêm “Xem hình nền” vào menu ngữ cảnh."
+  },
+  "review": {
+    "message": "Ôn tập"
+  },
+  "donation": {
+    "message": "Quyên góp"
+  },
+  "security": {
+    "message": "Tiện ích mở rộng không được phép chạy trên các trang đặc biệt."
+  },
+  "reload": {
+    "message": "Tải lại trang sau khi cài đặt hoặc cập nhật tiện ích mở rộng."
+  },
+  "failure": {
+    "message": "Không thể xem hình nền"
+  },
+  "report": {
+    "message": "Báo cáo một vấn đề?"
+  }
 }
