--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1,20 +1,26 @@
 {
-    "extName": {
-        "message": "檢視背景圖片"
-    },
-    "extDescription": {
-        "message": "\"檢視背景圖片\"上下文菜單。"
-    },
-    "title": {
-        "message": "檢視背景圖片"
-    },
-    "security": {
-        "message": "出於安全原因，該擴展名不適用於此頁面。"
-    },
-    "reload": {
-        "message": "請重新加載標籤。"
-    },
-    "failure": {
-        "message": "不能得到的背景圖片。\n報告問題？"
-    }
+  "extName": {
+    "message": "顯示背景圖像"
+  },
+  "extDescription": {
+    "message": "將「顯示背景圖像」新增至上下文功能表。"
+  },
+  "review": {
+    "message": "評價"
+  },
+  "donation": {
+    "message": "捐款"
+  },
+  "security": {
+    "message": "不允許在特殊頁面上運行擴充功能。"
+  },
+  "reload": {
+    "message": "請在安裝或更新擴充功能後重新載入頁面。"
+  },
+  "failure": {
+    "message": "無法顯示背景圖像"
+  },
+  "report": {
+    "message": "報告問題？"
+  }
 }
